--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
 </head>
 <body>
 
+  <!-- Pulsante Start AR -->
   <button id="startBtn">Start AR</button>
 
+  <!-- Video invisibile per MindAR -->
+  <video id="cameraVideo" autoplay muted playsinline style="display:none;"></video>
+
   <a-scene
-    mindar-image="imageTargetSrc: ./targets/target.json; maxTrack: 1"
+    mindar-image="imageTargetSrc: ./targets/target.json; maxTrack:1"
+    mindar-video="videoElementId: cameraVideo"
     embedded
     color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights; alpha: true; antialias: true"
-    vr-mode-ui="enabled: false"
-    device-orientation-permission-ui="enabled: true">
+    vr-mode-ui="enabled:false"
+    device-orientation-permission-ui="enabled:true">
 
     <!-- Camera gestita da MindAR -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
 
     <!-- Contenuto ancorato al target -->
     <a-entity mindar-image-target="targetIndex: 0">
-
       <a-entity id="pieces"></a-entity>
       <a-entity id="center"></a-entity>
 
-      <!-- Testo guida al centro del target -->
+      <!-- Testo guida al centro -->
       <a-text id="centerText" 
               value="Drag here" 
               align="center" 
@@ -49,20 +53,20 @@
               width="2"
               font="mozillavr">
       </a-text>
-
     </a-entity>
   </a-scene>
 
   <!-- Script logica puzzle -->
-  <script src="js/main_test.js"></script>
+  <script src="js/main.js"></script>
 
-  <!-- Pulsante Start AR -->
+  <!-- Script Start AR -->
   <script>
     const startBtn = document.getElementById('startBtn');
     const scene = document.querySelector('a-scene');
 
     startBtn.addEventListener('click', async () => {
       try {
+        // Avvia MindAR e la camera
         await scene.components['mindar-image'].start();
         startBtn.style.display = 'none';
       } catch(e) {
@@ -72,4 +76,5 @@
   </script>
 </body>
 </html>
+
 
