--- a/index.html
+++ b/index.html
@@ -2,79 +2,38 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Puzzle Merge VR</title>
+  <title>Test Camera</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- A-Frame -->
-  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <!-- MindAR per A-Frame -->
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-
   <style>
-    html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
+    body, html { margin:0; padding:0; width:100%; height:100%; background:black; }
     #startBtn {
-      position: fixed; top: 10px; left: 10px; z-index: 10;
-      padding: 10px 20px; font-size: 16px;
+      position: fixed; top:10px; left:10px; z-index:10;
+      padding:10px 20px; font-size:16px;
     }
+    video { width:100%; height:100%; object-fit:cover; }
   </style>
 </head>
 <body>
 
-  <!-- Pulsante Start AR -->
-  <button id="startBtn">Start AR</button>
+<button id="startBtn">Start Camera</button>
+<video id="cameraVideo" autoplay playsinline muted></video>
 
-  <!-- Video invisibile per MindAR -->
-  <video id="cameraVideo" autoplay muted playsinline
-         style="position:fixed;top:0;left:0;width:1px;height:1px;opacity:0;"></video>
+<script>
+const startBtn = document.getElementById('startBtn');
+const video = document.getElementById('cameraVideo');
 
-  <a-scene
-    mindar-image="imageTargetSrc: ./targets/target.json; maxTrack:1"
-    mindar-video="videoElementId: cameraVideo"
-    embedded
-    color-space="sRGB"
-    renderer="colorManagement: true, physicallyCorrectLights; alpha: true; antialias: true"
-    vr-mode-ui="enabled:false"
-    device-orientation-permission-ui="enabled:true">
+startBtn.addEventListener('click', async () => {
+  try {
+    const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+    video.srcObject = stream;
+    startBtn.style.display = 'none';
+  } catch (err) {
+    console.error('Errore accesso camera:', err);
+    alert('Impossibile aprire la camera: ' + err.message);
+  }
+});
+</script>
 
-    <!-- Camera gestita da MindAR -->
-    <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
-
-    <!-- Contenuto ancorato al target -->
-    <a-entity mindar-image-target="targetIndex: 0">
-      <a-entity id="pieces"></a-entity>
-      <a-entity id="center"></a-entity>
-
-      <!-- Testo guida al centro -->
-      <a-text id="centerText" 
-              value="Drag here" 
-              align="center" 
-              color="#FFFFFF"
-              position="0 0.5 0" 
-              scale="1.2 1.2 1.2"
-              width="2"
-              font="mozillavr">
-      </a-text>
-    </a-entity>
-  </a-scene>
-
-  <!-- Script logica puzzle -->
-  <script src="js/main.js"></script>
-
-  <!-- Script Start AR -->
-  <script>
-    const startBtn = document.getElementById('startBtn');
-    const scene = document.querySelector('a-scene');
-
-    startBtn.addEventListener('click', async () => {
-      try {
-        // Avvia MindAR e la camera dopo l'interazione utente
-        await scene.components['mindar-image'].start();
-        startBtn.style.display = 'none';
-      } catch(e) {
-        console.error('Errore avvio AR:', e);
-      }
-    });
-  </script>
 </body>
 </html>
 
