--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8">
-  <title>Test Camera</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body, html { margin:0; padding:0; width:100%; height:100%; background:black; }
-    #startBtn {
-      position: fixed; top:10px; left:10px; z-index:10;
-      padding:10px 20px; font-size:16px;
-    }
-    video { width:100%; height:100%; object-fit:cover; }
-  </style>
+<meta charset="utf-8">
+<title>Camera posteriore</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  html, body { margin:0; padding:0; width:100%; height:100%; }
+  video { width:100%; height:100%; object-fit:cover; }
+</style>
 </head>
 <body>
 
-<button id="startBtn">Start Camera</button>
 <video id="cameraVideo" autoplay playsinline muted></video>
 
 <script>
-const startBtn = document.getElementById('startBtn');
-const video = document.getElementById('cameraVideo');
-
-startBtn.addEventListener('click', async () => {
+(async () => {
   try {
-    const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+    const video = document.getElementById('cameraVideo');
+    const stream = await navigator.mediaDevices.getUserMedia({
+      video: { facingMode: { exact: "environment" } }
+    });
     video.srcObject = stream;
-    startBtn.style.display = 'none';
-  } catch (err) {
-    console.error('Errore accesso camera:', err);
-    alert('Impossibile aprire la camera: ' + err.message);
+  } catch(err) {
+    console.error("Impossibile aprire camera posteriore:", err);
+    alert("Camera posteriore non disponibile: " + err.message);
   }
-});
+})();
 </script>
 
 </body>
 </html>
-
-
