--- a/index.html
+++ b/index.html
@@ -2,28 +2,52 @@
 <html lang="it">
 <head>
 <meta charset="utf-8">
-<title>Camera posteriore</title>
+<title>MindAR Camera Posteriore</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- A-Frame -->
+<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+<!-- MindAR -->
+<script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+
 <style>
-  html, body { margin:0; padding:0; width:100%; height:100%; }
-  video { width:100%; height:100%; object-fit:cover; }
+  html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
 </style>
 </head>
 <body>
 
-<video id="cameraVideo" autoplay playsinline muted></video>
+<!-- Video invisibile per MindAR -->
+<video id="cameraVideo" autoplay playsinline muted
+       style="position:fixed;top:0;left:0;width:1px;height:1px;opacity:0;"></video>
+
+<a-scene
+  mindar-image="imageTargetSrc: ./targets/target.json; maxTrack:1"
+  mindar-video="videoElementId: cameraVideo"
+  embedded
+  color-space="sRGB"
+  renderer="colorManagement: true, physicallyCorrectLights; alpha: true; antialias: true"
+  vr-mode-ui="enabled:false"
+  device-orientation-permission-ui="enabled:true">
+
+  <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
+
+  <!-- Contenuto ancorato al marker -->
+  <a-entity mindar-image-target="targetIndex: 0">
+    <!-- Qui aggiungi i tuoi modelli -->
+    <a-box position="0 0 0" material="color: red;" scale="0.2 0.2 0.2"></a-box>
+  </a-entity>
+
+</a-scene>
 
 <script>
 (async () => {
   try {
-    const video = document.getElementById('cameraVideo');
-    const stream = await navigator.mediaDevices.getUserMedia({
-      video: { facingMode: { exact: "environment" } }
-    });
-    video.srcObject = stream;
+    // Avvia la scena MindAR
+    const scene = document.querySelector('a-scene');
+    await scene.components['mindar-image'].start();
+    console.log("MindAR attivo con camera posteriore");
   } catch(err) {
-    console.error("Impossibile aprire camera posteriore:", err);
-    alert("Camera posteriore non disponibile: " + err.message);
+    console.error("Errore avvio MindAR:", err);
   }
 })();
 </script>
