--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="utf-8">
-<title>MindAR Camera Posteriore</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Puzzle Merge VR AR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- A-Frame -->
-<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-<!-- MindAR -->
-<script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  <!-- A-Frame -->
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  <!-- MindAR per A-Frame -->
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 
-<style>
-  html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
-</style>
+  <style>
+    html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
+    #startBtn {
+      position: fixed; top: 10px; left: 10px; z-index: 10;
+      padding: 10px 20px; font-size: 16px;
+    }
+  </style>
 </head>
 <body>
 
+<!-- Pulsante Start AR visibile solo su iOS -->
+<button id="startBtn" style="display:none;">Start AR</button>
+
 <!-- Video invisibile per MindAR -->
-<video id="cameraVideo" autoplay playsinline muted
+<video id="cameraVideo" autoplay muted playsinline
        style="position:fixed;top:0;left:0;width:1px;height:1px;opacity:0;"></video>
 
 <a-scene
@@ -31,26 +38,50 @@
 
   <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
 
-  <!-- Contenuto ancorato al marker -->
+  <!-- Marker target -->
   <a-entity mindar-image-target="targetIndex: 0">
-    <!-- Qui aggiungi i tuoi modelli -->
-    <a-box position="0 0 0" material="color: red;" scale="0.2 0.2 0.2"></a-box>
-  </a-entity>
+    <a-entity id="pieces"></a-entity>
+    <a-entity id="center"></a-entity>
 
+    <a-text id="centerText" 
+            value="Drag here" 
+            align="center" 
+            color="#FFFFFF"
+            position="0 0.5 0" 
+            scale="1.2 1.2 1.2"
+            width="2"
+            font="mozillavr">
+    </a-text>
+  </a-entity>
 </a-scene>
 
+<!-- Logica dei pezzi rimane identica -->
+<script src="js/main.js"></script>
+
 <script>
-(async () => {
+const scene = document.querySelector('a-scene');
+const startBtn = document.getElementById('startBtn');
+
+async function startMindAR() {
   try {
-    // Avvia la scena MindAR
-    const scene = document.querySelector('a-scene');
     await scene.components['mindar-image'].start();
-    console.log("MindAR attivo con camera posteriore");
-  } catch(err) {
-    console.error("Errore avvio MindAR:", err);
+    startBtn.style.display = 'none';
+  } catch(e) {
+    console.error("Errore avvio MindAR:", e);
   }
-})();
+}
+
+// Rileva iOS per mostrare Start AR
+const iOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+if(iOS) {
+  startBtn.style.display = 'block';
+  startBtn.addEventListener('click', startMindAR);
+} else {
+  // Android Chrome: avvio automatico
+  startMindAR();
+}
 </script>
 
 </body>
 </html>
+
