--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Puzzle Merge VR AR</title>
+  <title>MindAR Camera Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <!-- MindAR per A-Frame -->
+  <!-- MindAR -->
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 
   <style>
-    html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
+    html, body { margin:0; padding:0; width:100%; height:100%; background:black; }
     #startBtn {
       position: fixed; top: 10px; left: 10px; z-index: 10;
-      padding: 10px 20px; font-size: 16px;
+      padding: 10px 20px; font-size: 16px; display:none;
     }
   </style>
 </head>
 <body>
 
-<!-- Pulsante Start AR visibile solo su iOS -->
-<button id="startBtn" style="display:none;">Start AR</button>
+<button id="startBtn">Start AR</button>
 
 <!-- Video invisibile per MindAR -->
 <video id="cameraVideo" autoplay muted playsinline
@@ -36,27 +35,14 @@
   vr-mode-ui="enabled:false"
   device-orientation-permission-ui="enabled:true">
 
-  <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
+  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
   <!-- Marker target -->
   <a-entity mindar-image-target="targetIndex: 0">
-    <a-entity id="pieces"></a-entity>
-    <a-entity id="center"></a-entity>
-
-    <a-text id="centerText" 
-            value="Drag here" 
-            align="center" 
-            color="#FFFFFF"
-            position="0 0.5 0" 
-            scale="1.2 1.2 1.2"
-            width="2"
-            font="mozillavr">
-    </a-text>
+    <a-box position="0 0 0" scale="0.2 0.2 0.2" color="red"></a-box>
   </a-entity>
-</a-scene>
 
-<!-- Logica dei pezzi rimane identica -->
-<script src="js/main.js"></script>
+</a-scene>
 
 <script>
 const scene = document.querySelector('a-scene');
@@ -66,12 +52,13 @@ async function startMindAR() {
   try {
     await scene.components['mindar-image'].start();
     startBtn.style.display = 'none';
+    console.log("MindAR avviato");
   } catch(e) {
     console.error("Errore avvio MindAR:", e);
   }
 }
 
-// Rileva iOS per mostrare Start AR
+// Controllo iOS
 const iOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
 if(iOS) {
   startBtn.style.display = 'block';
@@ -84,4 +71,5 @@ if(iOS) {
 
 </body>
 </html>
+
 
