--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>MindAR Camera Test</title>
+  <title>Puzzle Merge VR AR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <!-- MindAR -->
+  <!-- MindAR per A-Frame -->
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 
   <style>
-    html, body { margin:0; padding:0; width:100%; height:100%; background:black; }
+    html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
     #startBtn {
       position: fixed; top: 10px; left: 10px; z-index: 10;
       padding: 10px 20px; font-size: 16px; display:none;
@@ -20,14 +20,15 @@
 </head>
 <body>
 
+<!-- Pulsante Start AR (visibile su iOS o se serve interazione) -->
 <button id="startBtn">Start AR</button>
 
 <!-- Video invisibile per MindAR -->
 <video id="cameraVideo" autoplay muted playsinline
-       style="position:fixed;top:0;left:0;width:1px;height:1px;opacity:0;"></video>
+       style="position:fixed;top:0;left:0;width:200px;height:150px;opacity:0.01; z-index:1;"></video>
 
 <a-scene
-  mindar-image="imageTargetSrc: ./targets/target.json; maxTrack:1"
+  mindar-image="imageTargetSrc: ./targets/target.mind; maxTrack:1"
   mindar-video="videoElementId: cameraVideo"
   embedded
   color-space="sRGB"
@@ -35,14 +36,26 @@
   vr-mode-ui="enabled:false"
   device-orientation-permission-ui="enabled:true">
 
-  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+  <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
 
   <!-- Marker target -->
   <a-entity mindar-image-target="targetIndex: 0">
-    <a-box position="0 0 0" scale="0.2 0.2 0.2" color="red"></a-box>
-  </a-entity>
+    <a-entity id="pieces"></a-entity>
+    <a-entity id="center"></a-entity>
 
+    <a-text id="centerText" 
+            value="Drag here" 
+            align="center" 
+            color="#FFFFFF"
+            position="0 0.5 0" 
+            scale="1.2 1.2 1.2"
+            width="2"
+            font="mozillavr">
+    </a-text>
+  </a-entity>
 </a-scene>
+
+<script src="js/main.js"></script>
 
 <script>
 const scene = document.querySelector('a-scene');
@@ -58,18 +71,15 @@ async function startMindAR() {
   }
 }
 
-// Controllo iOS
-const iOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-if(iOS) {
-  startBtn.style.display = 'block';
-  startBtn.addEventListener('click', startMindAR);
-} else {
-  // Android Chrome: avvio automatico
-  startMindAR();
-}
+// Mostra sempre il pulsante e consenti anche su Android
+startBtn.style.display = 'block';
+startBtn.addEventListener('click', startMindAR);
+
+// Se vuoi puoi aggiungere un timeout per avvio automatico su Android
 </script>
 
 </body>
 </html>
+
 
 
