--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-  </head>
-  <body>
-    <a-scene 
-      mindar-image="imageTargetSrc: https://cdn.glitch.global/9f04977a-e4e3-400a-b333-8f1e68ac8cf9/targets_1.mind?v=1741110599129;
-      filterMinCF: 0.0001; 
-      filterBeta: 0.1; 
-      missTolerance: 10;"
-      color-space="sRGB" 
-      renderer="colorManagement: true, physicallyCorrectLights" 
-      vr-mode-ui="enabled: false" 
-      device-orientation-permission-ui="enabled: false">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MindAR Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
+  <!-- A-Frame -->
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  <!-- MindAR -->
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+</head>
+<body>
 
-      <!-- Marker target -->
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-entity id="pieces"></a-entity>
-        <a-entity id="center"></a-entity>
+<a-scene 
+  mindar-image="imageTargetSrc: ./targets/target.mind; maxTrack:1;"
+  color-space="sRGB" 
+  renderer="colorManagement: true, physicallyCorrectLights" 
+  vr-mode-ui="enabled: false"
+  device-orientation-permission-ui="enabled: false">
 
-        <a-text id="centerText" 
-                value="Drag here" 
-                align="center" 
-                color="#FFFFFF"
-                position="0 0.5 0" 
-                scale="1.2 1.2 1.2"
-                width="2"
-                font="mozillavr">
-        </a-text>
-      </a-entity>
-      
-    </a-scene>
+  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-    <script src="js/main.js"></script>
-  </body>
+  <!-- Marker target -->
+  <a-entity mindar-image-target="targetIndex: 0">
+    <!-- Simple cube to confirm recognition -->
+    <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red" 
+           animation__float="property: position; dir: alternate; dur: 1000; loop: true; to: 0 0.8 0">
+    </a-box>
+  </a-entity>
+
+</a-scene>
+
+</body>
 </html>
