--- a/index.html
+++ b/index.html
@@ -2,34 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MindAR Test</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Puzzle Merge AR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <!-- MindAR -->
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+
+  <style>
+    html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
+  </style>
 </head>
 <body>
 
 <a-scene 
   mindar-image="imageTargetSrc: ./targets/target.mind; maxTrack:1;"
-  color-space="sRGB" 
-  renderer="colorManagement: true, physicallyCorrectLights" 
+  color-space="sRGB"
+  renderer="colorManagement: true, physicallyCorrectLights; alpha: true; antialias: true"
   vr-mode-ui="enabled: false"
-  device-orientation-permission-ui="enabled: false">
+  device-orientation-permission-ui="enabled: true">
 
-  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+  <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
 
   <!-- Marker target -->
   <a-entity mindar-image-target="targetIndex: 0">
-    <!-- Simple cube to confirm recognition -->
-    <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red" 
-           animation__float="property: position; dir: alternate; dur: 1000; loop: true; to: 0 0.8 0">
-    </a-box>
+    <a-entity id="pieces"></a-entity>
+    <a-entity id="center"></a-entity>
+
+    <a-text id="centerText" 
+            value="Drag here" 
+            align="center" 
+            color="#FFFFFF"
+            position="0 0.5 0" 
+            scale="1.2 1.2 1.2"
+            width="2"
+            font="mozillavr">
+    </a-text>
   </a-entity>
 
 </a-scene>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
