--- a/index.html
+++ b/index.html
@@ -1,49 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Puzzle Merge AR</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  </head>
+  <body>
+    <a-scene 
+      mindar-image="imageTargetSrc: targets/target.mind;
+      filterMinCF: 0.0001; 
+      filterBeta: 0.1; 
+      missTolerance: 10;"
+      color-space="sRGB" 
+      renderer="colorManagement: true, physicallyCorrectLights" 
+      vr-mode-ui="enabled: false" 
+      device-orientation-permission-ui="enabled: false">
 
-  <!-- A-Frame -->
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <!-- MindAR -->
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+      <a-assets>
+        <img id="via_pratello" src="https://cdn.glitch.global/9f04977a-e4e3-400a-b333-8f1e68ac8cf9/via_pratello.png?v=1741110757377" />
+      </a-assets>
 
-  <style>
-    html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:black; }
-  </style>
-</head>
-<body>
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-<a-scene 
-  mindar-image="imageTargetSrc: ./targets/target.mind; maxTrack:1;"
-  color-space="sRGB"
-  renderer="colorManagement: true, physicallyCorrectLights; alpha: true; antialias: true"
-  vr-mode-ui="enabled: false"
-  device-orientation-permission-ui="enabled: true">
-
-  <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"></a-camera>
-
-  <!-- Marker target -->
-  <a-entity mindar-image-target="targetIndex: 0">
-    <a-entity id="pieces"></a-entity>
-    <a-entity id="center"></a-entity>
-
-    <a-text id="centerText" 
-            value="Drag here" 
-            align="center" 
-            color="#FFFFFF"
-            position="0 0.5 0" 
-            scale="1.2 1.2 1.2"
-            width="2"
-            font="mozillavr">
-    </a-text>
-  </a-entity>
-
-</a-scene>
-
-<script src="js/main.js"></script>
-
-</body>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-image src="#via_pratello" position="0 0 0" width="1" height="0.552" rotation="0 0 0" scale="1.5 1.9 3"></a-image>
+      </a-entity>
+      
+    </a-scene>
+  </body>
 </html>
